force-app/main/default/objects/Priorites_de_controles__c/Priorites_de_controles__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Priorités de contrôles</label>
</CustomObject>