force-app/main/default/objects/Priorites_de_controles__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>