force-app/main/default/objects/Priorites_de_controles__c/fields/Priorite__c.field-meta.xml
<CustomField>
    <fullName>Priorite__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Priorité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>