force-app/main/default/objects/Priorites_de_controles__c/fields/Rep_ou_non_rep__c.field-meta.xml
<CustomField>
    <fullName>Rep_ou_non_rep__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rep ou non rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>