force-app/main/default/objects/Priorites_de_controles__c/fields/Sous_type_de_controle__c.field-meta.xml
<CustomField>
    <fullName>Sous_type_de_controle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sous type de contrôle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>