force-app/main/default/objects/Priorites_de_controles__c/fields/Type_de_controle__c.field-meta.xml
<CustomField>
    <fullName>Type_de_controle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type de contrôle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>